test_suite/alan-2022-examples/failing/007750_mutation.alan
source m0 begin while 06230 do(relax end end
